@@ -27,50 +27,83 @@ class Profile extends CActiveRecord
 		$numerical = array();           
 		$rules = array();
 
-		$model=ProfileField::model()->forOwner()->findAll();
+		$model = ProfileField::model()->forOwner()->findAll();
 
 		foreach ($model as $field) 
 		{
 			$field_rule = array();
-			if ($field->required==1)
-				array_push($required,$field->varname);
-			if ($field->field_type=='int'||$field->field_type=='FLOAT'||$field->field_type=='INTEGER')
+
+			if ($field->required == 1)
+				array_push($required, $field->varname);
+
+			if ($field->field_type == 'int' 
+					|| $field->field_type == 'FLOAT'
+					|| $field->field_type =='INTEGER')
 				array_push($numerical,$field->varname);
-			if ($field->field_type=='VARCHAR'||$field->field_type=='TEXT') 
+
+			if ($field->field_type =='VARCHAR' 
+					||$field->field_type=='TEXT') 
 			{
-				$field_rule = array($field->varname, 'length', 'max'=>$field->field_size, 'min' => $field->field_size_min);
-				if ($field->error_message) $field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
+				$field_rule = array($field->varname,
+						'length',
+						'max'=>$field->field_size,
+						'min' => $field->field_size_min);
+
+				if ($field->error_message)
+					$field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
 				array_push($rules,$field_rule);
 			}
+
 			if ($field->field_type=='DATE') 
 			{
-				$field_rule = array($field->varname, 'type', 'type' => 'date', 'dateFormat' => 'yyyy-mm-dd');
-				if ($field->error_message) $field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
+				$field_rule = array($field->varname,
+						'type',
+						'type' => 'date',
+						'dateFormat' => 'yyyy-mm-dd');
+
+				if ($field->error_message)
+					$field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
 				array_push($rules,$field_rule);
 			}
+
 			if ($field->match) 
 			{
-				$field_rule = array($field->varname, 'match', 'pattern' => $field->match);
-				if ($field->error_message) $field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
+				$field_rule = array($field->varname,
+						'match',
+						'pattern' => $field->match);
+
+				if ($field->error_message)
+					$field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
 				array_push($rules,$field_rule);
 			}
 			if ($field->range) 
 			{
-				$field_rule = array($field->varname, 'in', 'range' => explode(';'.$field->range));
-				if ($field->error_message) $field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
+				$field_rule = array($field->varname,
+						'in',
+						'range' => explode(';'.$field->range)
+						);
+
+				if ($field->error_message)
+					$field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
 				array_push($rules,$field_rule);
 			}
+
 			if ($field->other_validator) 
 			{
-				$field_rule = array($field->varname, $field->other_validator);
-				if ($field->error_message) $field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
-				array_push($rules,$field_rule);
+				$field_rule = array($field->varname,
+						$field->other_validator);
+
+				if ($field->error_message)
+					$field_rule['message'] = Yii::t("UserModule.user", $field->error_message);
+				array_push($rules, $field_rule);
 			}
 
 		}
 
-		array_push($rules,array(implode(',',$required), 'required'));
-		array_push($rules,array(implode(',',$numerical), 'numerical', 'integerOnly'=>true));
+		array_push($rules,
+				array(implode(',',$required), 'required'));
+		array_push($rules,
+				array(implode(',',$numerical), 'numerical', 'integerOnly'=>true));
 
 		return $rules;
 	}
